--- a/NEAproject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/NEAproject/Areas/Identity/Pages/Account/Register.cshtml
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
 
-                <button type="button" class="btn btn-link" data-toggle="tooltip" data-html="true" title="text to show help?" data-placement="right">
+                <button type="button" class="btn btn-link" data-toggle="tooltip" data-html="true" title="please enter a valid email in the form name@domain.com" data-placement="right">
                     help?
                 </button>
                 <input asp-for="Input.Email" class="form-control col-md-8" />
@@ -23,7 +23,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
-                <button type="button" class="btn btn-link" data-toggle="tooltip" data-html="true" title="text to show help?" data-placement="right">
+                <button type="button" class="btn btn-link" data-toggle="tooltip" data-html="true" title="Please enter a password that is atleast 8 characters long and includes 1 capital letter, 1 number and 1 special character" data-placement="right">
                     help?
                 </button>
                 <input asp-for="Input.Password" class="form-control col-md-8" />
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.ConfirmPassword"></label>
-                <button type="button" class="btn btn-link" data-toggle="tooltip" data-html="true" title="text to show help?" data-placement="right">
+                <button type="button" class="btn btn-link" data-toggle="tooltip" data-html="true" title="please enter the same password that you entered in the password box" data-placement="right">
                     help?
                 </button>
                 <input asp-for="Input.ConfirmPassword" class="form-control col-md-8" />
